--- a/style.css
+++ b/style.css
@@ -9,23 +9,85 @@
 .card-body{
     padding: 1.25rem 5rem;
 }
-.card-body > form{
-    margin-bottom: 20px;
+span {
+    position: relative;
+    display: inline-block;
+    margin: 30px 10px;
 }
-.card-body > form input{
-    width: 100%;
-    height: 60px;
-    outline: none;
-    text-align: center;
+.gate {
+    display: inline-block;
+    width: 360px;
+    padding: 10px 0 10px 15px;
+    font-family: "Open Sans", sans;
+    font-weight: 400;
+    color: #377d6a;
+    background: #efefef;
+    border: 0;
+    border-radius: 3px;
+    outline: 0;
+    text-indent: 155px;
+    transition: all 0.3s ease-in-out;
 }
-
-.card-body > form button{
-    box-shadow: none;
-    border: none;
-    background-color: #1ca43bb0;
-    outline: none;
-    color: white;
-    padding: 17px
+.gate::-webkit-input-placeholder {
+    color: #efefef;
+    text-indent: 0;
+    font-weight: 300;
+}
+.gate + label {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 15px;
+    text-shadow: 0 1px 0 rgba(19, 74, 70, .4);
+    background: #7ab893;
+    transition: all 0.4s ease-in-out;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    transform-origin: left bottom;
+    z-index: 99;
+}
+.gate + label:before , .gate + label:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+	bottom: 0;
+    border-radius: 3px;
+    background: #377d6a;
+    transform-origin: left bottom;
+	transition: all 0.4s ease-in-out;
+    pointer-events: none;
+	z-index: -1;
+}
+.gate + label:before {
+    background: rgba(3, 36, 41, .2);
+    z-index: -2;
+    right: 20%;
+}
+/* span:nth-child(2) .gate {
+    text-indent: 85px;
+} */
+span:nth-child(2) .gate:focus, span:nth-child(2) .gate:active {
+    text-indent: 0;
+}
+.gate:focus, .gate:active {
+    color: #377d6a;
+    text-indent: 0;
+    background: #fff;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.gate:focus::-webkit-input-placeholder, .gate:active::-webkit-input-placeholder {
+    color: #aaa;
+}
+.gate:focus + label, .gate:active + label {
+    transform: rotate(-66deg);
+    border-radius: 3px;
+}
+.gate:focus + label:before, .gate:active + label:before {
+    transform: rotate(10deg);
 }
 .textAll{
     text-align: center;
